# Angels-NowPlaying

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  FRAME-DEVELOPMENT.md  LICENSES.md  README.md  STORE.md  TODO.md  package-lock.json  package.json  project.json  vite.config.js
.github/workflows/: release.yml
backups/: editor-common.css.bak  test-f5.html.bak
docs/: DEVELOPMENT.md  FRAME-DEVELOPMENT.md
notes/: restructure-src-plan.md  tauri-migration-plan.md  todo_list.md  v0.5.0-planning-app.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend.rs  lib.rs  main.rs
src-tauri/windows/: hooks.nsh
src/assets/: neon-album-art-frame.webm  neon-color-frame-main.webm
src/css/: changelog.css  editor-common.css  editor-header.css  index.css  instructions.css  settings.css  store.css  theme.css
src/css/editor_pages/: F1-Editor.css  F10-Editor.css  F11-Editor.css  F2-Editor.css  F3-Editor.css  F4-Editor.css  F5-Editor.css  F6-Editor.css  F7-Editor.css  F8-Editor.css  F9-Editor.css  header.css
src/css/main_pages/: 07-NowPlaying-F7-Styles.css  index.css  instructions.css  settings.css  store.css
src/editor_pages/: F1-Editor.html  F10-Editor.html  F11-Editor.html  F2-Editor.html  F3-Editor.html  F4-Editor.html  F5-Editor.html  F6-Editor.html  F7-Editor.html  F8-Editor.html  F9-Editor.html  editor-header.html  header.html  test_webp.html
src/fonts/: font-augment.js  fonts.css
src/fonts/user/: user-fonts.css
src/html/: changelog.html  editor-header.html  editor-shell.html  instructions.html  settings.html  store.html
src/js/: common.js  editor-header-loader.js  editor-shell.js  index-page.js  overlays.js  tauri.js  theme.js
src/main_pages/: 01-NowPlaying-F1.html  02-NowPlaying-F2.html  03-NowPlaying-F3.html  04-NowPlaying-F4.html  05-NowPlaying-F5.html  06-NowPlaying-F6.html  07-NowPlaying-F7.html  08-NowPlaying-F8.html  09-NowPlaying-F9.html  10-NowPlaying-F10.html  11-NowPlaying-F11.html  index.html  instructions.html  settings.html  store.html
src/overlays/frame-banner-visualizer/: README.md  common.js  description.md  editor.css  editor.html  main.css  main.html  manifest.json
src/overlays/frame-cassette-tape/: README.md  common.js  description.md  editor.css  editor.html  main.css  main.html  manifest.json
src/overlays/frame-color-bar-visualizer/: README.md  description.md  editor.css  editor.html  main.css  main.html  manifest.json
src/overlays/frame-glassmorphism-1/: README.md  common.js  description.md  editor.css  editor.html  main.css  main.html  manifest.json
src/overlays/frame-neon-lights/: README.md  (+6 more)
test-overlay/: README.md  common.js  editor.css  editor.html  manifest.json
tools/: test_webp.html
(+51 files in other folders)
