[package]
name = "app"
version = "0.11.3"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

# HTTP server for optional network serving
tiny_http = "0.12"
# socket2 lets us build a TcpListener with SO_REUSEADDR before handing
# it to tiny_http::Server::from_listener — needed on Windows because the
# OS holds the listening socket for several seconds after drop, which
# breaks rebinding when the user toggles LAN access on/off.
socket2 = "0.5"
mime_guess = "2.0"
lazy_static = "1.4"
dirs = "5"
local-ip-address = "0.6"

tauri = { version = "2.10.0", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
open = "5"
os_info = { version = "3", default-features = false }
rfd = "0.15"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
